Fix mobile navigation spacing for smaller screens

--- a/src/sass/components/_navbar-mobile.scss
+++ b/src/sass/components/_navbar-mobile.scss
@@ -89,7 +89,7 @@
     }
     .main-navigation {
       display: block;
-      margin: 80px auto 50px;
+      margin: 30px auto;
       max-width: 250px;
       text-align: center;
       li {
